-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.5.0
-
None
-
win 8.1, msvc2013 and mingw, 64bit
I think Bug QTCREATORBUG-13730 reappeared again.
I wanted to import a scons project, and after the last click on next creator crashed. the 4 project files were generated, though when i tried to open them, it again crashed. later I tried with some random .cpp and .h files, and it also crashed. there where just a few files arround, so to reproduce any main.cpp file should be enough.
i later checked Options -> Build & Run -> Kits. There were 2 Kits in Auto-detected, msvc 2013 and mingw. I made msvc default and thereafter creator didn't crash anymore. so when trying to reproduce, be sure that there is no default kit.
- replaces
-
QTCREATORBUG-15090 Qt Creator 3.5.0 Crashes when Importing Existing Project
-
- Closed
-
-
QTCREATORBUG-15375 hang-up when import project
-
- Closed
-
-
QTCREATORBUG-15377 Creator crashes on creating/opening a project
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-15002 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
125116,4 | KitManager: Consider sdk kits for initial default kit | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |